8336421: ciMethod() constructor should use ConditionalMutexLocker(Compile_lock)

Reviewed-by: jwaters, thartmann, shade